azure-nginx-tls/zeebe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: camunda
  name: zeebe-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
    - host: zeebe.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-zeebe-gateway
                port:
                  number: 26500
  tls:
    - secretName: tls-secret
      hosts:
        - zeebe.127.0.0.1.nip.io
